added a delete button and adjusment to ssome ejs

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -12,12 +12,9 @@
   <div class="card text-center">
     <div class="card-header"></div>
     <div class="card-body">
-      <h5 class="card-title">TinyURL for: <%= http://www.google.com %>
+      <h5 class="card-title">TinyURL for: <%= longURL %>
       </h5>
-      <p class="card-text">
-        Short URL ID: <a href="http://www.google.com">
-          <%= 9sm5xK%>
-        </a>
+      <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </p>
     </div>
     <div class="card-footer text-muted"></div>
