--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -31,9 +31,12 @@
             <tr>
               <td><a href="/urls/:id "><%= id %></a></td>
               <td><%= urls[id] %></td>
+              <td><form method="POST" action="/urls/9sm5xK/delete"> <button type="submit">Delete</button></form>
+              </td>
             </tr>
           <% } %>
         </tbody>
+
       </table>
     </main>
     <!-- Bootstrap JS -->
