--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -16,7 +16,9 @@
     />
     <title>TinyApp</title>
   </head>
+
   <body>
+    <%- include("./partials/_header") -%>
     <main style="margin: 1em;">
       <h3>My URLs</h3>
       <table class="table">
@@ -33,6 +35,8 @@
               <td><%= urls[id] %></td>
               <td><form method="POST" action="/urls/:id/delete"> <button type="submit">Delete</button></form>
               </td>
+              <td><form method="POST" action="/urls/:id"> <button type="submit">Edit</button></form>
+                </td>
             </tr>
           <% } %>
         </tbody>
