--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,6 +19,7 @@
 
   <body>
     <%- include("./partials/_header") -%>
+    
     <main style="margin: 1em;">
       <h3>My URLs</h3>
       <table class="table">
@@ -33,9 +34,9 @@
             <tr>
               <td><a href="/urls/<%=id %>"><%= id %></a></td>
               <td><%= urls[id] %></td>
-              <td><form method="POST" action="/urls/:id/delete"> <button type="submit">Delete</button></form>
+              <td><form method="POST" action="/urls/<%=id%>/delete"> <button type="submit">Delete</button></form>
               </td>
-              <td><form method="POST" action="/urls/:id"> <button type="submit">Edit</button></form>
+              <td><form method="GET" action="/urls/<%=id%>"> <button type="submit">Edit</button></form>
                 </td>
             </tr>
           <% } %>
