--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -20,8 +20,8 @@
     <h3>Login</h3>
     <form action="/login" method="POST">
       <div>
-        <label for="username">Username</label>
-        <input type="username" name="username">
+        <label for="email">Username</label>
+        <input type="email" name="email">
       </div>
       <div>
         <label for="password"> Password </label>
