--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -16,16 +16,16 @@
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longUrl %></h5>
+        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">
-          Short URL ID: <a href="/u/<%= id %>"><%= id %></a>
+          Short URL ID: <a href="/u/<%= shortURL %>"><%= shortURL%></a>
         </p> 
       </div>
       <div class="card-footer text-muted"></div>
-      <form action='/urls/<%=id%>' method="GET">
+      <form action='/urls/<%=shortURL%>' method="GET">
         <h3>Edit</h3>
         <label form="name"> New URL : </label>
-        <input type="text" name="longUrl" id="longUrl" placeholder="<%= longUrl %>">
+        <input type="text" name="longUrl" id="longUR" placeholder="<%= longURL%>">
         <button type="submit">Submit</button>
       </form>
       </div>
