--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -12,7 +12,7 @@
   </head>
 
   <body>
-    <%- include("./partials/_header") %>
+    <%- include("./partials/_header") -%>
     <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
@@ -22,10 +22,10 @@
         </p> 
       </div>
       <div class="card-footer text-muted"></div>
-      <form action='/urls/<%=shortURL%>' method="GET">
+      <form action='/urls/<%=shortURL%>' method="POST">
         <h3>Edit</h3>
         <label form="name"> New URL : </label>
-        <input type="text" name="longUrl" id="longUR" placeholder="<%= longURL%>">
+        <input type="text" name="longURL" id="longUrl" placeholder="<%= longURL%>">
         <button type="submit">Submit</button>
       </form>
       </div>
